<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/track2id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Track2">

    <TextView
        android:id="@+id/title"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="#828c24"
        android:ems="10"
        android:text="@string/track_your_spendings"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#ffff"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="343dp"
        android:layout_height="110dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="280dp"
        android:text="@string/below_your_can_enter_in_your_recent_spendings_to_gain_insite_on_how_much_of_your_money_is_going_to_certain_things_the_left_hand_side_has_drop_down_menus_so_you_can_pick_a_category_and_on_the_right_you_can_type_in_the_amount_spent"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/trackbut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Below your can enter in your recent spendings to gain insite on how much of your money is going to certain things. The left hand side has drop down menus, so you can pick a category, and on the right you can type in the amount spent." />


    <EditText
        android:id="@+id/in5"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="64dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/type_amount_0_00"
        android:inputType=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/in4"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/type_amount_0_00"
        android:inputType=""
        app:layout_constraintBottom_toTopOf="@+id/in5"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/in3"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/type_amount_0_00"
        android:inputType=""
        app:layout_constraintBottom_toTopOf="@+id/in4"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/in2"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/type_amount_0_00"
        android:inputType=""
        app:layout_constraintBottom_toTopOf="@+id/in3"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/in1"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/type_amount_0_00"
        android:inputType=""
        app:layout_constraintBottom_toTopOf="@+id/in2"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/sp1"
        android:layout_width="160dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/sp2"
        app:layout_constraintEnd_toStartOf="@+id/in1"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/sp2"
        android:layout_width="160dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/sp3"
        app:layout_constraintEnd_toStartOf="@+id/in2"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/sp3"
        android:layout_width="160dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/sp4"
        app:layout_constraintEnd_toStartOf="@+id/in3"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/sp4"
        android:layout_width="160dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/sp5"
        app:layout_constraintEnd_toStartOf="@+id/in4"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/sp5"
        android:layout_width="160dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/in5"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/trackbut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="#828c24"
        android:text="@string/buttont"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>